<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="image_classifier_failed">Image Classifier failed to initialized. Check log error for more details.</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="save_to_history">Save</string>
    <string name="result_image_desc">Result Image</string>
    <string name="more_info">More Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="preview_image">Preview Image</string>
    <string name="result_image">Result Image</string>
    <string name="history_title">History</string>
    <string name="news_title">News</string>
    <string name="classification_result_title">Classification Result</string>
    <string name="result_text">%1$s %2$s</string>
    <string name="inference_time">Processing Time %1$s ms</string>
    <string name="no_history_data_message">No History Data</string>
    <string name="no_article_data_message">No Article Data</string>
</resources>